tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_10.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (200 - 0);
               x := 200;
               y := z;
               z := ((- ((+ 1223) * x)) DIV (- z));
               x := x;
               q := q;
               q := q;
  (* error *)  p := r;
               y := ((+ (1223 MOD 2)) MOD 0);
               q := (((0 - 2) MOD z) <= z)
END Test18.